feat(User): add editing for User

--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -17,7 +17,7 @@
                     <th>#</th>
                     <th>Nom d'utilisateur</th>
                     <th>Adresse d'utilisateur</th>
-                    {# <th>Rôle</th> #}
+                    <th>Rôle</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
