--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -14,6 +14,7 @@
                     </h4>
                     <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a></h4>
                     <p>{{ task.content }}</p>
+                    <div class="small text-muted text-right">{{ task.user.username ~ (task.user == app.user ? ' (moi)' : '') }}</div>
                 </div>
                 <div>
                     <form action="{{ path('task_toggle', {'id' : task.id }) }}">
@@ -21,7 +22,7 @@
                             {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
                         </button>
                     </form>
-                    {% if task.user == app.user %}
+                    {% if task.user == app.user or is_granted('ROLE_ADMIN') %}
                         <form action="{{ path('task_delete', {'id' : task.id }) }}">
                             <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
                         </form>
