--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,10 +5,9 @@
         <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path('login_check') }}" method="post">
+    <form action="{{ path('login_check') }}" method="post" class="d-flex align-center g-20">
         <label for="username">Nom d'utilisateur :</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
+        <input type="text" id="username" name="_username" value="{{ last_username }}" class="min-w-200"/>
         <label for="password">Mot de passe :</label>
         <input type="password" id="password" name="_password" />
 
