feat(task): update roles to edit or delete a task

--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -16,7 +16,13 @@
                         <h4 class="pull-right">
                             {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span class="glyphicon glyphicon-remove"></span>{% endif %}
                         </h4>
-                        <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a></h4>
+                        <h4>
+                            {% if isOwner %}
+                            <a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a>
+                            {% else %}
+                            {{ task.title }}
+                            {% endif %}
+                        </h4>
                         <p>{{ task.content }}</p>
                         <div class="small text-muted text-right">{{ (isTaskAnonyme ? 'Utilisateur ' : '') ~ task.user.username ~ (isOwner ? ' (moi)' : '') }}</div>
                     </div>
