--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -30,7 +30,7 @@
                             <td>{{ user.email }}</td>
                             <td>{{ user.getRoleLabels()|join(', ') }}</td>
                             <td>
-                                <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Edit</a>
+                                <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Modifier</a>
                             </td>
                         </tr>
                     {% endif %}
