--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,7 @@
             <div class="row">
                 {% if is_granted('ROLE_ADMIN') %}
                     <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
+                    <a href="{{ path('user_list') }}" class="btn btn-secondary">Voir les utilisateurs</a>
                 {% endif %}
 
                 {% if app.user %}
