--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -8,7 +8,7 @@
 
     <div class="row">
         <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
-        <a href="{{ path('task_list', { done: false }) }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
-        <a href="{{ path('task_list', { done: true }) }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+        <a href="{{ path('task_list', { done: false }) }}" class="btn btn-info">Voir les tâches à faire</a>
+        <a href="{{ path('task_list', { done: true }) }}" class="btn btn-secondary">Voir les tâches terminées</a>
     </div>
 {% endblock %}
