--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -17,7 +17,7 @@
                             {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span class="glyphicon glyphicon-remove"></span>{% endif %}
                         </h4>
                         <h4>
-                            {% if isOwner %}
+                            {% if isOwner or isAdmin %}
                             <a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a>
                             {% else %}
                             {{ task.title }}
