--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,9 @@
             <div class="row">
                 {% if is_granted('ROLE_ADMIN') %}
                     <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
-                    <a href="{{ path('user_list') }}" class="btn btn-secondary">Voir les utilisateurs</a>
+                    {% if app.request.attributes.get('_route') != 'user_list' %}
+                        <a href="{{ path('user_list') }}" class="btn btn-secondary">Voir les utilisateurs</a>
+                    {% endif %}
                 {% endif %}
 
                 {% if app.user %}
